--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../src/style.css">
+    <title>Натяжные потолки в Москве</title>
 </head>
 <body>
-    
-    
+    <div class="global_wrapper">
+        <header>
+            <div class="main_header">
+                <div class="container">
+                    <div class="row">
+                        <div class="main_header-left_col">
+                            <div class="logo"><img src="..\src\img\logo011.svg" alt=""></div>
+                        <!-- <div class="block_address">
+                        г. Москва<br> и Московская область<br>
+                            <span class="schedule">ежедневно 9:00 20:00</span>
+                        </div> -->
+                        </div>
+                            <div class="main_header-center_col">
+                                <div class="block_address">
+                                    <small>г. Москва и Московская область<span class="schedule"> ежедневно 9:00 20:00</span></small>
+                                </div>
+                                <div class="wrapp_btn_head">
+                                    <a class = "main_btn" href="#">ВЫЗВАТЬ ЗАМЕРЩИКА</a>
+                                    <a class = "main_btn go_calculator" href="#"><img src="" alt="">КАЛЬКУЛЯТОР</a>
+                                </div>
+                            </div>
+                            <div class="main_header-right_col">
+                                <div class="block_connection">
+                                    <ul class="social_media">
+                                        <li><a href="#"><img src="../src/icons/WApp.svg" alt=""></a></li>
+                                        <li><a href="#"><img src="../src/icons/TG.svg" alt=""></a></li>
+                                        <li><a href="#"><img src="../src/icons/VK.svg" alt=""></a></li>
+                                        <li><a href="#"><img src="../src/icons/IG.svg" alt=""></a></li>
+                                    </ul>
+                                    <div class="number_phone">
+                                        <span class="phone_handset"></span>
+                                            <div class="flex_phone">
+                                                <a href="tel:88888888888">8 (999) 999 99 99</a>
+                                                <!-- <a href="tel:88888888888">8 (999) 999 99 99</a> -->
+                                            </div>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="head_nav_panel">
+                <div class="container">
+                    <nav class="navigation_wrapp">
+                        <ul class="nav_menu">
+                            <li class="nav_item"><a href="#">Главная</a></li>
+                            <li class="nav_item nav_item_hover"><a href="#">Каталог</a>
+                                <span class="parent"></span>
+                                <div class="dropdown-menu">
+                                    <ul class="dropdown-submenu">
+                                        <li class="submenu_title">По фактуре</li>
+                                            <ul>
+                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">Матовые</a></li>
+                                            </ul>
+                                    </ul>
+                                    <hr>
+                                    <ul class="dropdown-submenu">
+                                        <li class="submenu_title">По производителю</li>
+                                            <ul>
+                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">Матовые</a></li>
+                                            </ul>  
+                                    </ul>
+                                    <hr>
+                                    <ul class="dropdown-submenu">
+                                        <li class="submenu_title">По помещению</li>
+                                            <ul>
+                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">Матовые</a></li>
+                                            </ul>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav_item"><a href="#">Калькулятор</a></li>
+                            <li class="nav_item"><a href="#">Цены</a></li>
+                            <li class="nav_item"><a href="#">Каталог освещения</a></li>
+                            <li class="nav_item"><a href="#">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main class="main_content">
+            <div class="main_section">
+
+            </div>
+        </main>
+    </div>
+   <footer class="main_footer">
+
+   </footer>
 </body>
 </html>
