--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                                 </div>
                                 <div class="wrapp_btn_head">
                                     <a class = "main_btn" href="#">ВЫЗВАТЬ ЗАМЕРЩИКА</a>
-                                    <a class = "main_btn go_calculator" href="#"><img src="" alt="">КАЛЬКУЛЯТОР</a>
+                                    <a class = "main_btn go_calculator" href="#"><img src="../src/icons/calc.webp" alt="">КАЛЬКУЛЯТОР</a>
                                 </div>
                             </div>
                             <div class="main_header-right_col">
@@ -60,26 +60,48 @@
                                         <li class="submenu_title">По фактуре</li>
                                             <ul>
                                                 <li><a href="">Матовые</a></li>
-                                                <li><a href="">Матовые</a></li>
-                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">Глянцевые</a></li>
+                                                <li><a href="">Сатиновые</a></li>
+                                                <li><a href="">Фактурные</a></li>
                                             </ul>
                                     </ul>
-                                    <hr>
+                                    <ul class="dropdown-submenu">
+                                        <li class="submenu_title">Эксклюзивные</li>
+                                            <ul>
+                                                <li><a href="">Тканевые</a></li>
+                                                <li><a href="">D-Premium</a></li>
+                                                <li><a href="">Clipso</a></li>
+                                            </ul>
+                                    </ul>
+                                    <ul class="dropdown-submenu">
+                                        <li class="submenu_title">С подсветкой</li>
+                                            <ul>
+                                                <li><a href="">Парящие</a></li>
+                                                <li><a href="">Световые линии</a></li>
+                                                <li><a href="">Лайтбокс</a></li>
+                                                <li><a href="">Контурные</a></li>
+                                                <li><a href="">SLOTT</a></li>
+                                            </ul>
+                                    </ul>
                                     <ul class="dropdown-submenu">
                                         <li class="submenu_title">По производителю</li>
                                             <ul>
-                                                <li><a href="">Матовые</a></li>
-                                                <li><a href="">Матовые</a></li>
-                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">MSD</a></li>
+                                                <li><a href="">Pongs</a></li>
+                                                <li><a href="">Descor</a></li>
+                                                <li><a href="">Bauf</a></li>
+                                                <li><a href="">Teqtum</a></li>
                                             </ul>  
                                     </ul>
-                                    <hr>
                                     <ul class="dropdown-submenu">
-                                        <li class="submenu_title">По помещению</li>
+                                        <li class="submenu_title">По типу помещения</li>
                                             <ul>
-                                                <li><a href="">Матовые</a></li>
-                                                <li><a href="">Матовые</a></li>
-                                                <li><a href="">Матовые</a></li>
+                                                <li><a href="">На кухню</a></li>
+                                                <li><a href="">В коридор</a></li>
+                                                <li><a href="">В ванную</a></li>
+                                                <li><a href="">В спальню</a></li>
+                                                <li><a href="">В детскую</a></li>
+                                                <li><a href="">В гостиную</a></li>
                                             </ul>
                                     </ul>
                                 </div>
@@ -95,7 +117,175 @@
         </header>
         <main class="main_content">
             <div class="main_section">
-
+                <div class="banner_section"></div>
+                <div class="advantage_section">
+                    <div class="container">
+                        <div class="section_title"><h2>почему выбирают нас</h2></div>
+                        <div class="advantage_descr">
+                            <div class="item_circle">
+                                <div class="img-circle"><img src="../src/icons/img_abv1.webp" alt=""></div>
+                                <span>Чистый и безопасный монтаж</span>
+                            </div>
+                            <div class="item_circle">
+                                <div class="img-circle"><img src="../src/icons/img_abv2.webp" alt=""></div>
+                                <span>Чистый и безопасный монтаж</span>
+                            </div>
+                            <div class="item_circle">
+                                <div class="img-circle"><img src="../src/icons/img_abv3.webp" alt=""></div>
+                                <span>Чистый и безопасный монтаж</span>
+                            </div>
+                            <div class="item_circle">
+                                <div class="img-circle"><img src="../src/icons/img_abv4.webp" alt=""></div>
+                                <span>Чистый и безопасный монтаж</span>
+                            </div>
+                            <div class="item_circle">
+                                <div class="img-circle"><img src="../src/icons/img_abv5.webp" alt=""></div>
+                                <span>Чистый и безопасный монтаж</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product_card_section">
+                    <div class="section_title"><h2>виды натяжных потолков</h2></div>
+                    <div class="wrapp_product_tab">
+                        <div class="container">
+                            <div class="tab_product_card">
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Матовые</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Глянцевые</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Сатиновые</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Бесщелевые</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Теневые</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Двухуровневые</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Тканевые</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">С подсветкой</span>
+                                </div>
+                                <div class="item_circle product_item_circle">
+                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name">Фотопечать</span>
+                                </div>
+                            </div>
+                            <div class="block_descr_product_card">
+                                <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+                                <div class="product_descr">
+                                    <div class="title_product_flex">
+                                        <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+                                    <ul class="product-card_label">
+                                        <li class="sale_one">Скидка на полотно 30%</li>
+                                        <li class="sale_two">Популярное</li>
+                                    </ul>
+                                    </div>
+                                    <div class="text_descr">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                                        <br>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+                                    </div>
+                                    <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+                                    <a class = "main_btn" href="#">Подробнее</a>
+                                </div>
+                           </div>
+                       </div>
+                   </div>
+                </div>
+                <div class="calc_section">
+                    <div class="container">
+                        <div class="calc-content">
+                            <form class="calc_form" action="#">
+                                <div class="section_title"><h2>Калькулятор</h2>
+                                    <small><h3>Рассчитать стоимость натяжного потолка с<br> установкой</h3></small>
+                                </div>
+                                <div class="title_info">Информация о потолке</div>
+                                <div class="calc_container_form">
+                                    <div class="col_form">
+                                        <div class="form_group">
+                                            <label for="name_ceiling" class="form_label">Полотно</label>
+                                        <select name="canvas" id="name_ceiling">
+                                            <option value="0">Выберите</option>
+                                            <option value="0">Матовый</option>
+                                            <option value="0">Глянец</option>
+                                            <option value="0">Тканевый</option>
+                                        </select>
+                                        </div>
+                                        <div class="form_group">
+                                            <label for="square">Площадь м<sup>2</sup></label>
+                                            <input id="square" type="text" class="form_control">
+                                        </div>
+                                        <div class="form_group">
+                                            <label for="name_corner" class="form_label">Доп. углы</label>
+                                        <select name="corner" id="name_corner">
+                                            <option value="0">Выберите</option>
+                                            <option value="0">1</option>
+                                            <option value="0">2</option>
+                                            <option value="0">3</option>
+                                        </select>
+                                        </div>
+                                        <div class="form_group">
+                                            <label for="name_pipe" class="form_label">Кол. труб</label>
+                                        <select name="pipe" id="name_pipe">
+                                            <option value="0">Выберите</option>
+                                            <option value="0">1</option>
+                                            <option value="0">2</option>
+                                            <option value="0">3</option>
+                                        </select>
+                                        </div>
+                                        <div class="title_info">Освещение</div>
+                                        <div class="form_group">
+                                            <label for="name_chandelier">Люстра</label>
+                                            <input id="name_chandelier" type="text" class="form_control">
+                                        </div>
+                                        <div class="form_group">
+                                            <label for="name_lamp">Светильники</label>
+                                            <input id="name_lamp" type="text" class="form_control">
+                                        </div>
+                                    </div>
+                                    <div class="col_form">
+                                        <div class="final_price">
+                                            <span class="final_price_title">Итоговая стоимость</span>
+                                            <span class="final_sum"><span>0</span> руб/м2</span>
+                                        </div>
+                                        <small><h3>Оставьте заявку<br> и мы вам перезвоним</h3></small>
+                                        <div class="form_group">
+                                            <label for="usename">Имя*</label>
+                                            <input id="usename" type="text" class="form_control">
+                                        </div>
+                                        <div class="form_group">
+                                            <label for="phone">Телефон*</label>
+                                            <input id="phone" type="text" class="form_control">
+                                        </div>
+                                        <label class="checkbox">
+                                            <input type="checkbox" checked>
+                                            <span class="checkbox_text">Согласие на обработку <a class="data" href="#">персональных данных</a></span>
+                                        </label>
+                                        <button type="submit" class="main_btn">Оставить заявку</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>    
+                </div>
+    
             </div>
         </main>
     </div>
