--- a/src/index.html
+++ b/src/index.html
@@ -353,13 +353,19 @@
                     <div class="container">
                         <div class="section_title">Сертификаты</div>
                         <div class="wrapp_certificate_slide">
-                            <span class="arrow_left"></span>
-                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
-                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
-                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
-                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
-                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
-                            <span class="arrow_right"></span>
+                           <div class="certificate_slide">
+                                
+                                <!-- <div id="slide_clone" class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div> -->
+                                <div class="certificate_item"><img src="../src/img/Слой 534.png" alt=""></div>
+                                <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                                <div class="certificate_item"><img src="../src/img/Слой 532.png" alt=""></div>
+                                <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                                <div class="certificate_item"><img src="../src/img/Слой 534.png" alt=""></div>
+                                
+                                <!-- <div id="slide_clone" class="certificate_item"><img src="../src/img/Слой 534.png" alt=""></div> -->
+                           </div>
+                           <span class="arrow_left"></span>
+                           <span class="arrow_right"></span>
                         </div>
                     </div>
                 </div>
