--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </header>
-        <!-- <main class="main_content">
+        <main class="main_content">
             <div class="main_section">
                 <div class="wrapper_slider">
                     <div class="flex_banner">
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="advantage_section">
+                <!-- <div class="advantage_section">
                     <div class="container">
                         <div class="section_title"><h2>почему выбирают нас</h2></div>
                         <div class="advantage_descr">
